--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tutorials",
+  "name": "react-Learning",
   "version": "0.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -15,13 +15,14 @@
     "babel-preset-stage-0": "^6.3.13",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {},
   "scripts": {
-    "build":"webpack --watch",
-    "build:prod":"webpack -p --watch",
+    "build": "webpack --watch",
+    "build:prod": "webpack -p --watch",
     "dev": "webpack-dev-server --content-base public --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
