--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "react-tutorials",
+  "name": "react-setup",
   "version": "0.0.0",
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
     "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "bulma": "^0.6.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.1"
+  },
   "scripts": {
-    "build":"webpack --watch",
-    "build:prod":"webpack -p --watch",
+    "build": "webpack --watch",
+    "build:prod": "webpack -p --watch",
     "dev": "webpack-dev-server --content-base public --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
